--- a/public/index.html
+++ b/public/index.html
@@ -383,10 +383,22 @@
             transition: all 0.2s;
         }
 
-        .market-item:hover {
-            transform: scale(1.05);
-            border-color: #4ade80;
-            box-shadow: 0 5px 15px rgba(34, 197, 94, 0.3);
+       .market-item:hover {
+    transform: scale(1.05);
+    border-color: #4ade80;
+    box-shadow: 0 5px 15px rgba(34, 197, 94, 0.3);
+}
+
+.market-item.locked {
+    opacity: 0.5;
+    cursor: not-allowed;
+    background: rgba(239, 68, 68, 0.1);
+}
+
+.market-item.locked:hover {
+    transform: none;
+    border-color: #ef4444;
+}
         }
 
         .market-item-icon {
