--- a/public/index.html
+++ b/public/index.html
@@ -1477,7 +1477,7 @@ function showPlantDetails(plantId) {
                 </div>
             `}
             
-            <button class="item-action" onclick="closeModal('libraryModal'); openLibrary();" 
+            <button class="item-action" onclick="closeModal('libraryModal'); openplantLibrary();" 
                     style="margin-top: 15px;">
                 Back to Library
             </button>
