--- a/public/index.html
+++ b/public/index.html
@@ -803,10 +803,10 @@
                     <span class="building-icon">⚗️</span>
                     <span class="building-name">Apothecary</span>
                 </div>
-                <div class="building" onclick="openLibrary()">
-                    <span class="building-icon">📚</span>
-                    <span class="building-name">Library</span>
-                </div>
+              <div class="building" onclick="openPlantLibrary()">
+    <span class="building-icon">📚</span>
+    <span class="building-name">Library</span>
+</div>
                 <div class="building" onclick="openFishPond()">
                     <span class="building-icon">🎣</span>
                     <span class="building-name">Koi Pond</span>
