--- a/public/index.html
+++ b/public/index.html
@@ -306,6 +306,7 @@
 
         // Plant Database (Expanded to 50+ from the 369)
         const PLANTS = {
+    ...MEDICINAL_PLANTS,  // Adds all medicinal plants
             // VEGETABLES (20)
             tomato: {
                 name: 'Tomato',
@@ -2064,5 +2065,6 @@
             }, 5000);
         };
     </script>
+    <script src="medicinal_plants.js"></script>
 </body>
 </html>
