Properly integrate medicinal plants - script tag before body, spread operator in PLANTS

--- a/public/index.html
+++ b/public/index.html
@@ -306,6 +306,7 @@
 
         // Plant Database (Expanded to 50+ from the 369)
         const PLANTS = {
+            ...MEDICINAL_PLANTS,  // Adds all medicinal plants
             // VEGETABLES (20)
             tomato: {
                 name: 'Tomato',
@@ -2063,6 +2064,8 @@
                 }
             }, 5000);
         };
+    <script src="medicinal_plants.js"></script>
+    <script src="medicinal_plants.js"></script>
     </script>
 </body>
 </html>
