--- a/public/index.html
+++ b/public/index.html
@@ -2070,27 +2070,7 @@
             }, 5000);
         };
     </script>
-<script src="medicinal_plants.js"></script>
-<script>
-setTimeout(function() {
-    if (typeof MEDICINAL_PLANTS_DB !== "undefined" && typeof PLANTS !== "undefined") {
-        Object.assign(PLANTS, MEDICINAL_PLANTS_DB);
-        console.log("Added medicinal plants!");
-    }
-}, 100);
-</script>
-<script src="all_plants_database.js"></script>
-<script>
-setTimeout(function() {
-    if (typeof ALL_MEDICINAL_PLANTS !== "undefined" && typeof PLANTS !== "undefined") {
-        Object.assign(PLANTS, ALL_MEDICINAL_PLANTS);
-        console.log("Added " + Object.keys(ALL_MEDICINAL_PLANTS).length + " medicinal plants!");
-        if (typeof game !== "undefined" && game.updateUI) {
-            game.updateUI();
-        }
-    }
-}, 500);
-</script>
+<script src="fix_buttons.js"></script>
 </body>
 </html>
 <script src="medicinal_plants_complete.js"></script>
