--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,8 @@
                     <button onclick="harvestPlot()">Harvest</button>
                     <button onclick="saveGame()">💾 Save</button>
                     <button onclick="nextDay()">🌙 Next Day</button>
+                    <button onclick="uploadGrowthPhoto()">📷 Submit Growth Proof</button>
+                    <button onclick="proofOfGrowth.claimRewards()">💰 Claim CANA</button>
                 </div>
             </div>
         </div>
@@ -172,6 +174,9 @@
     <script src="plant_database.js"></script>
     <script src="marketplace.js"></script>
     <script src="game_state.js"></script>
+    <script src="weather_biome.js"></script>
+    <script src="proof_of_growth.js"></script>
+    <script src="game_update.js"></script>
     
     <script>
         // Main game initialization
