Add multiplayer visiting, guilds, and competition systems

--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,9 @@
                     <button onclick="harvestPlot()">Harvest</button>
                     <button onclick="saveGame()">💾 Save</button>
                     <button onclick="nextDay()">🌙 Next Day</button>
+                    <button onclick="showFriendsList()">👥 Friends</button>
+                    <button onclick="guildSystem.displayGuildUI()">🏰 Guild</button>
+                    <button onclick="showCompetitions()">🏆 Competitions</button>
                     <button onclick="uploadGrowthPhoto()">📷 Submit Growth Proof</button>
                     <button onclick="proofOfGrowth.claimRewards()">💰 Claim CANA</button>
                 </div>
