--- a/public/game.html
+++ b/public/game.html
@@ -1331,5 +1331,7 @@
         // Auto-save every 30 seconds
         setInterval(saveGame, 30000);
     </script>
+      <script src="saveSystem.js"></script>
+    <script src="save-integration.js"></script>
 </body>
 </html>
